fix: Aplicar estilos z-index mÃ¡s agresivos para modales CRUD
- Agregar z-index inline en p-dialog (9999)
- Agregar styleClass crud-form-dialog
- Estilos especÃ­ficos para .crud-form-dialog
- Forzar z-index en .p-dialog-wrapper
- Asegurar que contenido del modal sea clickeable
- Resolver problema de superposiciÃ³n con toolbar

--- a/src/app/shared/crud-form/crud-form.component.scss
+++ b/src/app/shared/crud-form/crud-form.component.scss
@@ -7,6 +7,24 @@
   z-index: 9998 !important;
 }
 
+// Specific class for CRUD form dialog
+:host ::ng-deep .crud-form-dialog {
+  z-index: 9999 !important;
+}
+
+:host ::ng-deep .crud-form-dialog .p-dialog {
+  z-index: 9999 !important;
+}
+
+:host ::ng-deep .crud-form-dialog .p-dialog-mask {
+  z-index: 9998 !important;
+}
+
+// Force modal to be on top of everything
+:host ::ng-deep .p-dialog-wrapper {
+  z-index: 9999 !important;
+}
+
 .form-container {
   max-height: 70vh;
   overflow-y: auto;
